--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.platform=postgres
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/planet-crud
+
+spring.datasource.username=postgres
+
+spring.datasource.password=perica00
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
